--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -162,13 +162,7 @@
 <li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
-<li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
-<li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
-<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Proof Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Proof Chambers</a></li>
-<li class="nav-item mr-0"><a href="nail-panitration.html" title="Cycling Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cycling Test Chamber</a></li>
-</ul>
+
 </li>
 <li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
@@ -300,13 +294,7 @@
 <li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
-<ul>
-<li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
-<li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
-<li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
-<li><a href="explosion-chambers.html" title="Explosion Proof Chambers">Explosion Proof Chambers</a></li>
-<li><a href="nail-panitration.html" title="Cycling Test Chamber">Cycling Test Chamber</a></li>
-</ul>
+
 </li>
 <li>
 <a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
@@ -399,23 +387,18 @@
 </div>
 <div class="container py-5">
 <div class="product col-lg-12">
-    <div class="product-description col-lg-8 pr-4">
+    <div class="product-description col-lg-6 pr-4">
         <h2><strong>Layout</strong></h2> <br> 
        <p>The layout consists of two main lines — the Module Line and the Pack Line — as shown in the layout. The Module Line has a total length of 24,220 mm, while the Pack Line extends to 27,816 mm, ensuring smooth and continuous manufacturing flow. A transfer crane is strategically placed between these two lines to efficiently transfer battery packs from the module section to the pack section.</p> <br>
        <p>The line incorporates a Module Section (1200 × 800 mm) and a Pack Section (1900 × 1000 mm), designed for optimal space utilization and seamless integration. By combining advanced automation with skilled human operation, this setup ensures consistent quality, reduced cycle time, and enhanced productivity</p>
     </div>
-     <div class="products-image col-lg-4">
+     <div class="products-image col-lg-6">
         <img src="img/semi-layout.png" alt="Layout" title="Layout" class="w-100">
     </div>
 </div>
 </div>
 <div class="container">
- 
-    <div class="app-sec col-lg-12">
-       <div class="products-image col-lg-5">
-      <img src="img/list-of-items-semi-prismatic.png" alt="List Of Items" title="List Of Items">
-    </div>
-        <div class="application-sec product-description col-lg-7 pl-5">
+        <div class="application-sec product-description pl-5" style="margin-left: 0;">
         <h2>List Of Items</h2> <br>
           <ul>
             <li>Cell Grading Machine</li>
@@ -429,7 +412,6 @@
             <li>Battery Aging Machines</li>
             <li>Conveyors</li>
           </ul>
-        </div>
       </div>
   </div>
   <!-- Footer -->
