--- a/sorting-machine.html
+++ b/sorting-machine.html
@@ -163,13 +163,7 @@
 <li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
-<li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
-<li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
-<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Proof Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Proof Chambers</a></li>
-<li class="nav-item mr-0"><a href="nail-panitration.html" title="Cycling Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cycling Test Chamber</a></li>
-</ul>
+
 </li>
 <li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
@@ -301,13 +295,7 @@
 <li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
-<ul>
-<li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
-<li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
-<li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
-<li><a href="explosion-chambers.html" title="Explosion Proof Chambers">Explosion Proof Chambers</a></li>
-<li><a href="nail-panitration.html" title="Cycling Test Chamber">Cycling Test Chamber</a></li>
-</ul>
+
 </li>
 <li>
 <a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
@@ -385,40 +373,51 @@
 </div><!-- /.container -->                      
 </section>
 <!-- About Us -->
- 
-<div class="container py-5">
-  <div class="row g-4">
-    <!-- Card 1 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="4 in one (18650 - 32700) in India"><img src="img/4-in-one.png" class="card-img-top product-img" alt="4 in one (18650 - 32700) in India" title="4 in one (18650 - 32700) in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title text-center">4 in one (18650 - 32700)</h5>
-          </div>
-          <div class="mt-3 d-flex justify-content-center">
-            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-          </div>
-        </div>
-      </div>
+ <div class="container py-5">
+<div class="product col-lg-12">
+    <div class="product-image col-lg-5">
+          <img src="img/4-in-one.png" alt="For 33140" title="For 33140" class="w-100 mb-3"><br>
     </div>
-
-    <!-- Card 2 -->
-    <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="For 33140 in India"><img src="img/for-33140.png" class="card-img-top product-img" alt="For 33140 in India" title="For 33140 in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title text-center">For 33140</h5>
-          </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-          </div>
-        </div>
-      </div>
+    <div class="product-description col-lg-7 sort">
+       <h2><strong>4 in one (18650 - 32700)</strong></h2> <br>
+        <table>
+  <tr><td>Equipment capa city</td><td>(2500/3500)pcs /hour, with scanning code</td></tr>
+  <tr><td>Work objects</td><td>18650/21700/26650/32700/32140 </td></tr>
+  <tr><td>Sorting bins</td><td>Good products bin: 9 (5/9) bins; NG bin: 1 bin</td></tr>
+  <tr><td>Testing parameter</td><td>AC IR; DC voltage; Open circuit</td></tr>
+  <tr><td>Testing system</td><td>Hioki BT3561A</td></tr>
+  <tr><td>MES Interface</td><td>With date save and transferring function</td></tr>
+  <tr><td>Power supply</td><td>Single phase, AC220V</td></tr>
+</table>
     </div>
-  </div>
 </div>
+</div> 
+
+<div class="container py-5">
+<div class="product col-lg-12">
+    <div class="product-image col-lg-5">
+          <img src="img/for-33140.png" alt="For 33140" title="For 33140" class="w-100 mb-3"><br>
+    </div>
+    <div class="product-description col-lg-7 sort">
+       <h2><strong>For 33140</strong></h2> <br>
+        <table>
+  <tr><td>Equipment capa city</td><td>(2500/3500)pcs /hour, with scanning code</td></tr>
+  <tr><td>Work objects</td><td>33140 </td></tr>
+  <tr><td>Sorting bins</td><td>Good products bin: 9 (5/9) bins; NG bin: 1 bin</td></tr>
+  <tr><td>Testing parameter</td><td>AC IR; DC voltage; Open circuit</td></tr>
+  <tr><td>Testing system</td><td>Hioki BT3561A</td></tr>
+  <tr><td>MES Interface</td><td>With date save and transferring function</td></tr>
+  <tr><td>Power supply</td><td>Single phase, AC220V</td></tr>
+</table>
+    </div>
+</div>
+</div> 
+
+
+
+
+
+
 
   <!-- Footer -->
 <footer class="py-4">
