--- a/welding-machines.html
+++ b/welding-machines.html
@@ -164,13 +164,7 @@
 <li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
-<li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
-<li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
-<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Proof Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Proof Chambers</a></li>
-<li class="nav-item mr-0"><a href="nail-panitration.html" title="Cycling Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cycling Test Chamber</a></li>
-</ul>
+
 </li>
 <li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
@@ -302,13 +296,7 @@
 <li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
-<ul>
-<li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
-<li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
-<li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
-<li><a href="explosion-chambers.html" title="Explosion Proof Chambers">Explosion Proof Chambers</a></li>
-<li><a href="nail-panitration.html" title="Cycling Test Chamber">Cycling Test Chamber</a></li>
-</ul>
+
 </li>
 <li>
 <a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
@@ -421,7 +409,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Laser Welding For 33140 in India"><img src="img/laser-welding-for-33140.png" class="card-img-top product-img" alt="Laser Welding For 33140 in India" title="Laser Welding For 33140 in India"></a>
+        <a href="#" title="Laser Welding For 33140 in India"><img src="img/laser-welding-33140.png" class="card-img-top product-img" alt="Laser Welding For 33140 in India" title="Laser Welding For 33140 in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Laser Welding For 33140</h5>
