--- a/turnkey-assembly-lines.html
+++ b/turnkey-assembly-lines.html
@@ -163,13 +163,7 @@
 <li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
-<ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="temperature-test-chamber.html" title="Temperature Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Temperature Test Chamber</a></li>
-<li class="nav-item mr-0"><a href="humidity-tester.html" title="Humidity Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Humidity Tester</a></li>
-<li class="nav-item mr-0"><a href="vibration-tester.html" title="Vibration Tester" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Vibration Tester</a></li>
-<li class="nav-item mr-0"><a href="explosion-chambers.html" title="Explosion Proof Chambers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Explosion Proof Chambers</a></li>
-<li class="nav-item mr-0"><a href="nail-panitration.html" title="Cycling Test Chamber" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cycling Test Chamber</a></li>
-</ul>
+
 </li>
 <li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
@@ -301,13 +295,7 @@
 <li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
-<ul>
-<li><a href="temperature-test-chamber.html" title="Temperature Test Chamber">Temperature Test Chamber</a></li>
-<li><a href="humidity-tester.html" title="Humidity Tester">Humidity Tester</a></li>
-<li><a href="vibration-tester.html" title="Vibration Testers">Vibration Tester</a></li>
-<li><a href="explosion-chambers.html" title="Explosion Proof Chambers">Explosion Proof Chambers</a></li>
-<li><a href="nail-panitration.html" title="Cycling Test Chamber">Cycling Test Chamber</a></li>
-</ul>
+
 </li>
 <li>
 <a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
@@ -434,8 +422,8 @@
     <li>Electric Boats and Small Vehicles</li>
     </ul>
     </div>-->
-    <div class="app-image col-lg-6">
-      <img src="img/turnkey-applications.jpeg" alt="Applications of Turnkey Assembly Lines" title="Applications of Turnkey Assembly Lines" class="w-100">
+    <div class="app-image col-lg-10">
+      <img src="img/turneky-application.png" alt="Applications of Turnkey Assembly Lines" title="Applications of Turnkey Assembly Lines" class="w-100">
     </div>
     </div>
 </div>
